# Simple3DGame

./: .clangd  .clinerules  .gitignore  CMakeLists.txt  CMakeLists_backup.txt  CONTEXT_MAP.md  Debugging FPS Controls.md  README.md  SkillsSystem.cpp  apply_loadobj_fix.py  build_log.txt  build_log_settler.txt  colony.cpp  diff.txt  fix_duplicates.py  fix_rmodels_dir.py  fix_rmodels_final.py  package-lock.json  patch_rmodels.py  patch_settler.py  restore_rmodels.py  session_log.txt  session_log_2.txt  temp.cpp  temp_00identity.md  temp_02_visuals.md  temp_02visuals.md  temp_03cppengineering.md  temp_append.txt  temp_append_ui.txt  terrain.cpp  terrain.h
.agent/rules/: 00_identity.md  00identity.md  01_automation.md  01automation.md  02_visuals.md  02visuals.md  03_cpp_engineering.md  03cppengineering.md  04settlerai.md  05loghygiene.md  06contextawareness.md  07creativejuice.md  08emergentai.md  09precision.md  10sandboxarch.md  polski.md
.agent/workflows/: brainstorm.md  build.md  debug.md  log.md  optimize.md  play.md  terminal.md
Nowy folder/: package-lock.json
build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Simple3DGame.sln  Simple3DGame.vcxproj  Simple3DGame.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_test/raylib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  raylib.sln
components/: ActionComponent.cpp  ActionComponent.h  BuildingComponent.cpp  BuildingComponent.h  EnergyComponent.h  EquipmentComponent.cpp  EquipmentComponent.h  InteractionComponent.cpp  InteractionComponent.h  InventoryComponent.cpp  InventoryComponent.h  NavComponent.cpp  NavComponent.h  NeedComponent.cpp  NeedComponent.h  PositionComponent.cpp  PositionComponent.h  ResourceComponent.cpp  ResourceComponent.h  SkillsComponent.cpp  SkillsComponent.h  SquadComponent.h  StatsComponent.cpp  StatsComponent.h  TraitsComponent.cpp  TraitsComponent.h  TreeComponent.cpp  TreeComponent.h
context_hub/: MASTER_CONTEXT.md  Visual_Gallery.md
context_hub/plans/: LivingWorld_ImplementationPlan.md  phase0_quick_start.md
context_hub/specs/: decision_impact_analysis.md  faction_system_technical_spec.md  player_trinity_technical_spec.md  techmagic_fusion_arsenal.md  worldmanager_technical_spec.md
context_hub/walkthroughs/: advanced_settler_ai_walkthrough.md  faction_prototype_walkthrough.md  player_character_walkthrough.md  squad_system_walkthrough.md  worldmanager_expansion_walkthrough.md  worldmanager_walkthrough.md
core/: DIContainer.cpp  DIContainer.h  Entity.h  EventBus.cpp  EventBus.h  EventBusValidator.h  EventSystem.cpp  EventSystem.h  GameComponent.h  GameEngine.cpp  GameEngine.h  GameEntity.h  GameEvents.h  GameSystem.cpp  GameSystem.h  IComponent.h  IGameSystem.h  Logger.h  ObjectPool.h
docs/: Architecture_Refactor_Plan.md  CharacterInteractionSystem_Architecture.md  CharacterInteractionSystem_Implementation.md  KnifeCraftingFlow.md  SPATIAL_CONVENTIONS.md  spec_crafting_knife.md
entities/: Ant.cpp  Ant.h  GameEntity.h  PlayerCharacter.cpp  PlayerCharacter.h
events/: InteractionEvents.h
game/: Animal.cpp  Animal.h  Bed.cpp  Bed.h  BoxCollider.h  BuildingBlueprint.cpp  BuildingBlueprint.h  BuildingInstance.cpp  BuildingInstance.h  BuildingTask.cpp  BuildingTask.h  CMakeLists.txt  Colony.cpp  Colony.h  ColonyAI.cpp  ColonyAI.h  DebugConsole.cpp  DebugConsole.h  Door.cpp  Door.h  Faction.cpp  Faction.h  GatheringTask.cpp  GatheringTask.h  InteractableObject.cpp  InteractableObject.h  Item.cpp  Item.h  NavigationGrid.cpp  NavigationGrid.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Region.cpp  Region.h  ResourceNode.cpp  ResourceNode.h  ResourceTypes.cpp  ResourceTypes.h  (+15 more)
nodriver_lmarena_profile/: Local State
nodriver_lmarena_profile/Default/: BrowsingTopicsState  DIPS  DIPS-wal  Favicons  History  History-journal  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state
nodriver_lmarena_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  index
nodriver_lmarena_profile/GraphiteDawnCache/: data_1  index
nodriver_lmarena_profile/Safe Browsing/: ChromeExtMalware.store  UrlBilling.store  UrlBilling.store.4_13411615581001785  UrlBilling.store.4_13411616246999153  UrlCsdAllowlist.store  UrlCsdDownloadAllowlist.store  UrlHighConfidenceAllowlist.store  UrlMalBin.store  UrlMalBin.store.4_13411615580999363  UrlMalBin.store.4_13411616246995539  UrlMalware.store  UrlMalware.store.4_13411615580991148  UrlMalware.store.4_13411616246986507  UrlSoceng.store  UrlSubresourceFilter.store  UrlSubresourceFilter.store.4_13411598703015965  UrlSuspiciousSite.store  UrlSuspiciousSite.store.4_13411610897133396  UrlSuspiciousSite.store.4_13411612786993226  UrlUws.store  UrlUws.store.4_13411615580994509  UrlUws.store.4_13411616246989768
src/: main.cpp  main.html
systems/: BuildingSystem.cpp  BuildingSystem.h  CraftingSystem.cpp  CraftingSystem.h  EditorShared.h  EditorSystem.cpp  EditorSystem.h  EquipmentSystem.cpp  EquipmentSystem.h  FoodSystem.cpp  FoodSystem.h  InteractionSystem.cpp  InteractionSystem.h  InventorySystem.cpp  InventorySystem.h  NeedsSystem.cpp  NeedsSystem.h  ResourceData.h  ResourceDefinitions.h  ResourceSystem.cpp  ResourceSystem.h  ResourceTypes.h  Resources.h  SkillTypes.h  SkillsComponent.h  SkillsSystem.cpp  SkillsSystem.h  StorageSystem.cpp  StorageSystem.h  TestSystem.cpp  TestSystem.h  TimeCycleSystem.cpp  TimeCycleSystem.h  UISystem.cpp  UISystem.h
(+922 files in other folders)
